--- a/cloud_storage/login/templates/login.html
+++ b/cloud_storage/login/templates/login.html
@@ -8,19 +8,20 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1 style="font-size: 20"> {{ signorlog }} </h1>
+        <div></div>
         <div id='section1' class='section1'>
-                <form action="/login/" method="post">
+                <form action="/{{action}}/" method="post">
+                    {% csrf_token %}
                     <label for="Email">E-mail: </label>
                     <input id="Email" type="text" name="Email" value="{{ current_email }}">
 
                     <label for="Password">Password: </label>
                     <input id="Password" type="text" name="Password" value="{{ current_password }}">
 
-                    <input type="submit" value="Log In">
+                    <input type="submit" value={{signorlog}}>
                 </form>
-
         </div>
-
+<h2 style="font-size: 20">{{ note }}</h2>
 </body>
 </html>
