--- a/cloud_storage/login/static/loggedin.css
+++ b/cloud_storage/login/static/loggedin.css
@@ -66,3 +66,17 @@ div.content {
   position:relative;
   color: red;
 }
+
+.unorderedlist {
+  list-style-type: none;
+  padding: 0;
+  border: 1px solid #ddd;
+}
+
+.listitem {
+  padding: 8px 16px;
+  border-bottom: 1px solid #ddd;
+}
+.listitem:last-child {
+  border-bottom: none
+}
